--- a/projetointerface/Listarotina.html
+++ b/projetointerface/Listarotina.html
@@ -12,7 +12,7 @@
             color: rgb(238, 231, 244);
             font-family: 'Courier New', Courier, monospace;
             text-align: center;
-            
+
         }
 
         p {
@@ -30,6 +30,22 @@
             text-align: center;
 
         }
+
+        em {
+            color: rgb(193, 87, 195);
+            text-align: center;
+        }
+
+        strong {
+            text-align: center;
+            background-color: rgb(193, 87, 195);
+            color: rgb(238, 231, 244);
+
+        }
+
+        table {
+            color: rgb(69, 67, 67);
+        }
     </style>
 </head>
 
@@ -40,7 +56,16 @@
 
     <b>
         <p class="rotininhacolor">Rotina do meu dia a dia</p>
-        <table>
+        <h2>
+            <em>
+                Meu Planejamento Semanal, onde organizo minha
+                rotina do dia a dia para cumprir com as expectativas do dia. Mas como qualquer outro dia pode haver
+                imprevistos, havendo a nao cumprimento da meta, mas isso nao afeta minha rotina.
+
+            </em>
+        </h2>
+
+        <table border="1px">
             <h2>
                 <tr>
                     <th>Segunda</th>
@@ -51,8 +76,131 @@
                     <th>Sabado</th>
                     <th>Domingo</th>
                 </tr>
+                <tr>
+                    <td>
+                        <ul>
+                            <li>09:40 Preparo café da manhã</li>
+                            <li>10:00 Estudo as aulas</li>
+                            <li>12:00 Preparo o almoço</li>
+                            <li>13:30 Almoço</li>
+                            <li>14:00 Descanso</li>
+                            <li>15:00 Estudo materias EAD</li>
+                            <li>15:50 Preparo o lanche da tarde</li>
+                            <li>16:50 Estudo materias hibridas</li>
+                            <li>19:15 Faço deveres</li>
+                            <li>20:50 Jogo LOL</li>
+                            <li>22:30 Preparo o lanche da noite</li>
+                            <li>23:40 Durmo</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>09:40 Preparo café da manhã</li>
+                            <li>10:00 Estudo as aulas</li>
+                            <li>12:00 Preparo o almoço</li>
+                            <li>13:30 Almoço</li>
+                            <li>14:00 Descanso</li>
+                            <li>15:00 Estudo a materia que tenho dificuldade</li>
+                            <li>15:50 Preparo o lanche da tarde</li>
+                            <li>16:50 Me arrumo para ir a Faculdade</li>
+                            <li>17:40 Saio de casa para pegar o busao</li>
+                            <li>19:15 Começa as aulas</li>
+                            <li>22:00 Sai da faculdade para ir pra casa</li>
+                            <li>22:40 Vou para academia</li>
+                            <li>23:40 Termino meu treino</li>
+                            <li>00:00 Reviso as minhas com dificuldades</li>
+                            <li>00:45 Durmo</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>09:40 Preparo café da manhã</li>
+                            <li>10:00 Estudo as aulas</li>
+                            <li>12:00 Preparo o almoço</li>
+                            <li>13:30 Almoço</li>
+                            <li>14:00 Descanso</li>
+                            <li>15:00 Estudo materias Hibridas</li>
+                            <li>15:50 Preparo o lanche da tarde</li>
+                            <li>16:50 Me arrumo para ir a Faculdade</li>
+                            <li>17:40 Saio de casa para pegar o busao</li>
+                            <li>19:15 Começa as aulas</li>
+                            <li>22:00 Sai da faculdade para ir pra casa</li>
+                            <li>22:40 Vou para academia</li>
+                            <li>23:40 Termino meu treino</li>
+                            <li>00:00 Reviso as minhas dificuldades</li>
+                            <li>00:45 Durmo</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>09:40 Preparo café da manhã</li>
+                            <li>10:00 Estudo as aulas</li>
+                            <li>12:00 Preparo o almoço</li>
+                            <li>13:30 Almoço</li>
+                            <li>14:00 Descanso</li>
+                            <li>15:00 Estudo materias EAD</li>
+                            <li>15:50 Preparo o lanche da tarde</li>
+                            <li>16:50 Me arrumo para ir a Faculdade</li>
+                            <li>17:40 Saio de casa para pegar o busao</li>
+                            <li>19:15 Começa as aulas</li>
+                            <li>22:40 Sai da faculdade para ir pra casa</li>
+                            <li>22:50 Meu esposo me busca na faculdade</li>
+                            <li>23:20 Chego em casa</li>
+                            <li>23:50 Reviso as minhas dificuldades</li>
+                            <li>00:45 Durmo</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>09:40 Preparo café da manhã</li>
+                            <li>10:00 Estudo as aulas</li>
+                            <li>12:00 Preparo o almoço</li>
+                            <li>13:30 Almoço</li>
+                            <li>14:00 Descanso</li>
+                            <li>15:00 Estudo materias Hibridas</li>
+                            <li>15:50 Preparo o lanche da tarde</li>
+                            <li>16:50 Me arrumo para ir a Faculdade</li>
+                            <li>17:40 Saio de casa para pegar o busao</li>
+                            <li>19:15 Começa as aulas</li>
+                            <li>22:00 Sai da faculdade para ir pra casa</li>
+                            <li>22:40 Vou para academia</li>
+                            <li>23:40 Termino meu treino</li>
+                            <li>00:00 Reviso as minhas dificuldades</li>
+                            <li>00:45 Durmo</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>Depende da programaçao do dia</li>
+                            <li>10:30 Preparo café da manhã</li>
+                            <li>12:30 Almoço no restaurante</li>
+                            <li>14:00 Descanso</li>
+                            <li>15:00 Começo a faxina</li>
+                            <li>20:00 Termino a faxina com meu esposo</li>
+                            <li>20:10 Descansamos</li>
+                            <li>22:40 Joga LOL</li>
+                            <li>23:40 Vamos assistir um filme juntos</li>
+                            <li>00:00 Durmo</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>08:30 Preparo café da manhã</li>
+                            <li>09:30 Programaçao do dia</li>
+                            <li>20:10 Voltamos da Programaçao</li>
+                            <li>22:40 Joga LOL</li>
+                            <li>23:40 Vamos assistir um filme juntos</li>
+                            <li>00:00 Durmo</li>
+                        </ul>
+                    </td>
+                </tr>
+
             </h2>
         </table>
+        <strong>
+            Está tabela não há regra, apenas um modo de se organizar durante a semana para não haver a sobrecarga de
+            conteúdos
+        </strong>
 </body>
 
 </html>
