--- a/logicadeprogramacao/aula3/farmaciaaula3.html
+++ b/logicadeprogramacao/aula3/farmaciaaula3.html
@@ -53,7 +53,7 @@
 <body>
     <form>
         <h1>
-            <img src="file:///C:/Users/ister/Downloads/Farmaciazinha-Ideal-Ltda..webp">
+            <img src="./assets/Farmaciazinha-Ideal-Ltda..webp">
             <p>Farmaciazinha da Istéfani </p>
         </h1>
         <b>
