--- a/logicadeprogramacao/aula3/restaurante.html
+++ b/logicadeprogramacao/aula3/restaurante.html
@@ -9,11 +9,12 @@
     <style>
         h1 {
             color: aliceblue;
-            background-color: rgb(247, 70, 81);
+            background-color: rgb(78, 129, 174);
+            text-align: center;
         }
 
         p {
-           color: crimson; 
+           color: rgb(19, 61, 98);
         }
     </style>
 </head>
