--- a/projetointerface/Listarotina.html
+++ b/projetointerface/Listarotina.html
@@ -38,13 +38,17 @@
 
         strong {
             text-align: center;
-            background-color: rgb(193, 87, 195);
             color: rgb(238, 231, 244);
 
         }
 
         table {
             color: rgb(69, 67, 67);
+        }
+
+        mark {
+            background-color: rgb(236, 223, 101);
+            color: rgb(72, 73, 73);
         }
     </style>
 </head>
@@ -198,9 +202,32 @@
             </h2>
         </table>
         <strong>
-            Está tabela não há regra, apenas um modo de se organizar durante a semana para não haver a sobrecarga de
-            conteúdos
+            <mark><i>Está tabela não há regra, apenas um modo de se organizar durante a semana para não haver a
+                    sobrecarga de
+                    conteúdos</i></mark>
         </strong>
+
+
+
+        <blockquote>
+            "Com organizaçao e tempo, acha-se o segredo de fazer tudo bem feito." - Pitágoras
+
+
+            <p>Detalhes da Lista:</p>
+            <dl>
+                <dt>Refeições:</dt>
+                <dd>A cada refeição envio para minha nutricionista</dd>
+                <dt>Estudos:</dt>
+                <dd>A cada dúvida não solucionada, assisto aulas do guanabara para facilitar meu entendimento,
+                    caso mesmo assim não entender a materia, meu esposo me da aulas para entender.
+                <dt>Academia:</dt>
+                <dd>
+                    Vou durante 3 vezes por semana para poder adquerir o hábito, conforme esse hábito vá se tornando
+                    fácil acrecento mais um dia de treino. A regra é que nos final de semana saio para andar no parque
+                    ou ir em um clube. Sempre práticando algum exercício ao ar livre.
+                </dd>
+                </dd>
+            </dl>
 </body>
 
 </html>
