--- a/logicadeprogramacao/aula3/farmacia/farmaciaaula3.html
+++ b/logicadeprogramacao/aula3/farmacia/farmaciaaula3.html
@@ -8,6 +8,24 @@
     <title>Farmacia</title>
 
     <style>
+        form {
+            background-color: rgba(171, 87, 194, 0.371);
+
+        }
+
+        footer {
+            background-color: rgba(171, 87, 194, 0.371);
+            font-family: 'Courier New', Courier, monospace;
+            color: rgb(255, 255, 255);
+            line-height: 200px;
+            width: 100%;
+            left: 100%;
+            text-align: center;
+            
+       
+
+        }
+
         img {
             width: auto;
             height: auto;
@@ -17,7 +35,7 @@
         }
 
         p {
-            background-color: rgb(171, 87, 194);
+
             color: aliceblue;
             font-family: 'Courier New', Courier, monospace;
             font-style: normal;
@@ -26,7 +44,10 @@
         }
 
         input {
-            margin: 0%;
+            text-align: center;
+            font-family: 'Courier New', Courier, monospace;
+            text-align: center;
+
 
         }
 
@@ -39,8 +60,8 @@
             text-align: center;
             font-family: 'Courier New', Courier, monospace;
             font-style: normal;
-            color: rgb(95, 90, 90);
-            background-color: rgb(245, 240, 96);
+            color: rgb(255, 255, 255);
+            background-color: rgba(196, 96, 224, 0.371);
         }
 
         h3 {
@@ -58,7 +79,8 @@
         </h1>
         <b>
             <h2>
-                <p>PRODUTOS</p>
+                <p>PRODUTO</p>
+                <input type="string" id="Produtos">
             </h2>
         </b>
         <h2>Valor da Unidade
@@ -69,10 +91,14 @@
 
         </h2>
         <h1>TOTAL A PAGAR </h1>
-        <h3></h3>
-    </form>
 
-    <script src="farmaciaaula3.js"></script>
+    </form>
+    <h3></h3>
+    <b>
+        <h2>
+            <footer>Venha Aproveitar nossos Descontos</footer>
+        </h2>
+        <script src="farmaciaaula3.js"></script>
 </body>
 
 </html>
