--- a/logicadeprogramacao/aula4/caixaeletronico/caixaeletronico.html
+++ b/logicadeprogramacao/aula4/caixaeletronico/caixaeletronico.html
@@ -6,17 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caixa Eletronico</title>
+    <link rel="stylesheet" href="caixaeletronico.css">
 </head>
 
 <body>
-    <h1>Caixa eletronico</h1>
+    <form>
+        <h1>Caixa eletronico</h1>
 
-    <h2>Nota de 10<input type="radio" id="10"></h2>
-    <h2>Nota de 50 <input type="radio" id="50"></h2>
-    <h2>Nota de 100 <input type="radio" id="100"></h2>
-    <input type="submit" id="Sacar">
-    <input type="reset" id="Limpar">
-
+        <h2>Valor do Saque<input type="number" id="valor"></h2>
+        <input type="submit" id="Sacar">
+        <input type="reset" id="Limpar">
+    </form>
+    <h3></h3>
+    <h3></h3>
+    <h3></h3>
 </body>
+
+<script src="caixaeletronico.js"></script>
 
 </html>
