--- a/projetointerface/aula3/home/home.html
+++ b/projetointerface/aula3/home/home.html
@@ -37,7 +37,7 @@
     </div><br>
 
     <div class="div_em_cinza">
-        <h1>Seje Criativo</h1>
+        <h1>Seja Criativo</h1>
         <p>Nesta página, você irá encontrar um pouco sobre o meu perfil.<br>
             Estou usando um pouco da minha criatividade para o html e css.<br>
             Com a prática podemos chegar a qualquer
